--- a/csr/public/index.html
+++ b/csr/public/index.html
@@ -11,7 +11,7 @@
 
 
     <!-- <title><%= htmlWebpackPlugin.options.title %></title> -->
-    <title>CSR </title>
+    <title>CSR-SETARA Kab.Konawe Selatan </title>
 
     <!-- CSS here -->
         <link rel="stylesheet" href="assets/css/bootstrap.min.css" />
